<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:padding="15dp"
        android:src="@drawable/menu_user" />

    <LinearLayout
        android:id="@+id/from_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imageView1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:background="@drawable/form_instruction_bottom"
            android:gravity="center"
            android:text="@string/activity_login_email_button"
            android:textColor="@color/form_instruction_text_color" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@drawable/form_input_top_bottom" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/from_email"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="62dp"
            android:layout_height="match_parent"
            android:background="@color/form_instruction_background"
            android:gravity="center"
            android:text="@string/activity_login_password_button"
            android:textColor="@color/form_instruction_text_color" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@drawable/form_input_bottom" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rememberLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/passwordLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/generalConditionsToggleButton"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/toggle_button"
            android:textOff=""
            android:textOn="" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/activity_login_remember_button"
            android:textColor="@color/citrongis_text_color_dark" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rememberLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/menu_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/activity_login_connect_button"
        android:textColor="@drawable/menu_button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/menu_button"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/activity_login_forget_button"
        android:textColor="@drawable/menu_button" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/logo_image_facebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/logo_facebook" />

            <ImageView
                android:id="@+id/logo_image_googlep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/logo_googlep" />

            <ImageView
                android:id="@+id/logo_image_twitter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/logo_twitter" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

		    <Button
		        android:id="@+id/button_signup"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="30dp"
		        android:layout_marginRight="30dp"
		        android:layout_marginTop="5dp"
		        android:text="@string/activity_login_signup_button"
		        android:background="@drawable/menu_button"
		        android:textColor="@drawable/menu_button" />

		</LinearLayout>
    </LinearLayout>


</RelativeLayout>